--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   font_awesome_flutter: ^9.1.0
   shared_preferences: ^2.0.6
+  audio_service: ^0.17.1
+  flutter_tts: ^3.1.0
+  just_audio: ^0.7.5
 
 dev_dependencies:
   flutter_test:
