--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.fralonsoft.flutter_multiplication_trainer_app">
+   <uses-permission android:name="android.permission.WAKE_LOCK"/>
+   <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
+   <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
    <application
         android:label="flutter_multiplication_trainer_app"
         android:icon="@mipmap/ic_launcher">
@@ -37,5 +41,17 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+
+    <service android:name="com.ryanheise.audioservice.AudioService">
+      <intent-filter>
+        <action android:name="android.media.browse.MediaBrowserService" />
+      </intent-filter>
+    </service>
+
+    <receiver android:name="com.ryanheise.audioservice.MediaButtonReceiver" >
+      <intent-filter>
+        <action android:name="android.intent.action.MEDIA_BUTTON" />
+      </intent-filter>
+    </receiver> 
     </application>
 </manifest>
