--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
    <application
-        android:label="flutter_multiplication_trainer_app"
+        android:label="Multiplication Trainer"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
